// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`multivariate (parallel) canvas renders base one axis per category, one polyline per field 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 84.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 84.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 62.950001,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 62.950001,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 106.9,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 132.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 56.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 94.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 94.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 56.3,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 106.9,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 62.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 68.95,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 62.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 68.95,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 132.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders color byName fixed-color override 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 84.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 84.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 62.950001,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 62.950001,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 106.9,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 132.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 56.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 94.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 94.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 56.3,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 106.9,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 62.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 68.95,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 62.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 68.95,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 132.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders edge cases null gap (a missing value breaks the polyline) 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 31,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 52.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 31,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 52.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 84.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 66.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 84.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 66.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 31,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 31,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 56.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 94.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 73.166667,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 94.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 56.3,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 73.166667,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 106.9,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders edge cases single line (one numeric field) 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 31,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 31,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 31,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 31,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 31,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 31,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 31,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 31,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 56.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders layout vertical (axes top-to-bottom) 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 320,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 228.800003,
      "y": 89.333336,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.399994,
      "y": 162.666672,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 289.600006,
      "y": 236,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 320,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 228.800003,
            "y": 89.333336,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.399994,
            "y": 162.666672,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 289.600006,
            "y": 236,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 244,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 289.600006,
      "y": 89.333336,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 168,
      "y": 162.666672,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 228.800003,
      "y": 236,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 244,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 289.600006,
            "y": 89.333336,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 168,
            "y": 162.666672,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 228.800003,
            "y": 236,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 282,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 168,
      "y": 89.333336,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 274.399994,
      "y": 162.666672,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.399994,
      "y": 236,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 282,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 168,
            "y": 89.333336,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 274.399994,
            "y": 162.666672,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.399994,
            "y": 236,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 320,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 228.8,
      "y": 102.666667,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.4,
      "y": 189.333333,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 289.6,
      "y": 276,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 320,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 228.8,
            "y": 102.666667,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.4,
            "y": 189.333333,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 289.6,
            "y": 276,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 244,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 289.6,
      "y": 102.666667,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 168,
      "y": 189.333333,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 228.8,
      "y": 276,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 244,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 289.6,
            "y": 102.666667,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 168,
            "y": 189.333333,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 228.8,
            "y": 276,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 282,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 168,
      "y": 102.666667,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 274.4,
      "y": 189.333333,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.4,
      "y": 276,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 282,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 168,
            "y": 102.666667,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 274.4,
            "y": 189.333333,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.4,
            "y": 276,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders line style line opacity 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 84.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 84.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 62.950001,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 62.950001,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 106.9,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 132.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 56.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 94.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 94.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 56.3,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 106.9,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 62.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 68.95,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 62.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 68.95,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 132.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders line style line width 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": 4,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 84.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 52.299999,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 94.900002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 84.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 52.299999,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 94.900002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 137.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 62.950001,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 116.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 137.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 62.950001,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 116.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": 4,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 106.9,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 132.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 56.3,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 94.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 56.3,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 106.9,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 94.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 56.3,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 106.9,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 62.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 157.5,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 68.95,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 132.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 62.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 157.5,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 68.95,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 132.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders smooth curves the polylines through the axis crossings 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 112.529396,
      "cpy1": 31,
      "cpy2": 81.266426,
      "x": 146.666672,
      "y": 94.900002,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 176.529388,
      "cpx2": 223.470612,
      "cpy1": 106.826424,
      "cpy2": 122.163216,
      "x": 253.333328,
      "y": 116.199997,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 287.470612,
      "cpx2": 360,
      "cpy1": 109.383217,
      "cpy2": 52.299999,
      "x": 360,
      "y": 52.299999,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 112.529396,
            "cpy1": 31,
            "cpy2": 81.266426,
            "x": 146.666672,
            "y": 94.900002,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 176.529388,
            "cpx2": 223.470612,
            "cpy1": 106.826424,
            "cpy2": 122.163216,
            "x": 253.333328,
            "y": 116.199997,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 287.470612,
            "cpx2": 360,
            "cpy1": 109.383217,
            "cpy2": 52.299999,
            "x": 360,
            "y": 52.299999,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 84.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 117.915886,
      "cpy1": 84.25,
      "cpy2": 45.123535,
      "x": 146.666672,
      "y": 52.299999,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 181.915894,
      "cpx2": 218.576279,
      "cpy1": 61.098537,
      "cpy2": 130.559448,
      "x": 253.333328,
      "y": 137.5,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 282.576294,
      "cpx2": 360,
      "cpy1": 143.339447,
      "cpy2": 94.900002,
      "x": 360,
      "y": 94.900002,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 84.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 117.915886,
            "cpy1": 84.25,
            "cpy2": 45.123535,
            "x": 146.666672,
            "y": 52.299999,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 181.915894,
            "cpx2": 218.576279,
            "cpy1": 61.098537,
            "cpy2": 130.559448,
            "x": 253.333328,
            "y": 137.5,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 282.576294,
            "cpx2": 360,
            "cpy1": 143.339447,
            "cpy2": 94.900002,
            "x": 360,
            "y": 94.900002,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 114.287376,
      "cpy1": 57.625,
      "cpy2": 136.691788,
      "x": 146.666672,
      "y": 137.5,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 178.287369,
      "cpx2": 219.932388,
      "cpy1": 138.289276,
      "cpy2": 66.284874,
      "x": 253.333328,
      "y": 62.950001,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 283.932404,
      "cpx2": 360,
      "cpy1": 59.894875,
      "cpy2": 116.199997,
      "x": 360,
      "y": 116.199997,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 114.287376,
            "cpy1": 57.625,
            "cpy2": 136.691788,
            "x": 146.666672,
            "y": 137.5,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 178.287369,
            "cpx2": 219.932388,
            "cpy1": 138.289276,
            "cpy2": 66.284874,
            "x": 253.333328,
            "y": 62.950001,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 283.932404,
            "cpx2": 360,
            "cpy1": 59.894875,
            "cpy2": 116.199997,
            "x": 360,
            "y": 116.199997,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 31,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 111.834592,
      "cpy1": 31,
      "cpy2": 90.376535,
      "x": 146.666667,
      "y": 106.9,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 175.834592,
      "cpx2": 224.165408,
      "cpy1": 120.736535,
      "cpy2": 139.118267,
      "x": 253.333333,
      "y": 132.2,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 288.165408,
      "cpx2": 360,
      "cpy1": 123.938267,
      "cpy2": 56.3,
      "x": 360,
      "y": 56.3,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 31,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 111.834592,
            "cpy1": 31,
            "cpy2": 90.376535,
            "x": 146.666667,
            "y": 106.9,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 175.834592,
            "cpx2": 224.165408,
            "cpy1": 120.736535,
            "cpy2": 139.118267,
            "x": 253.333333,
            "y": 132.2,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 288.165408,
            "cpx2": 360,
            "cpy1": 123.938267,
            "cpy2": 56.3,
            "x": 360,
            "y": 56.3,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 94.25,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 118.824892,
      "cpy1": 94.25,
      "cpy2": 48.045349,
      "x": 146.666667,
      "y": 56.3,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 182.824892,
      "cpx2": 217.835731,
      "cpy1": 67.020349,
      "cpy2": 149.080413,
      "x": 253.333333,
      "y": 157.5,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 281.835731,
      "cpx2": 360,
      "cpy1": 164.260413,
      "cpy2": 106.9,
      "x": 360,
      "y": 106.9,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 94.25,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 118.824892,
            "cpy1": 94.25,
            "cpy2": 48.045349,
            "x": 146.666667,
            "y": 56.3,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 182.824892,
            "cpx2": 217.835731,
            "cpy1": 67.020349,
            "cpy2": 149.080413,
            "x": 253.333333,
            "y": 157.5,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 281.835731,
            "cpx2": 360,
            "cpy1": 164.260413,
            "cpy2": 106.9,
            "x": 360,
            "y": 106.9,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 62.625,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 114.197789,
      "cpy1": 62.625,
      "cpy2": 156.537348,
      "x": 146.666667,
      "y": 157.5,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 178.197789,
      "cpx2": 219.551713,
      "cpy1": 158.434848,
      "cpy2": 72.956289,
      "x": 253.333333,
      "y": 68.95,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 283.551713,
      "cpx2": 360,
      "cpy1": 65.366289,
      "cpy2": 132.2,
      "x": 360,
      "y": 132.2,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 62.625,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 114.197789,
            "cpy1": 62.625,
            "cpy2": 156.537348,
            "x": 146.666667,
            "y": 157.5,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 178.197789,
            "cpx2": 219.551713,
            "cpy1": 158.434848,
            "cpy2": 72.956289,
            "x": 253.333333,
            "y": 68.95,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 283.551713,
            "cpx2": 360,
            "cpy1": 65.366289,
            "cpy2": 132.2,
            "x": 360,
            "y": 132.2,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (radar) canvas renders one polygon per numeric field, filling the canvas 1`] = `[]`;
